Get sure web settings are applied BEFORE loading pages

There is also a change in font size management, ignoring DPI and consi
dering settings as pixels.
Change default font size to 16 (default internet pixel font size)

BUG: 322982